--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^4.0.0",
     "@types/lodash": "^4.14.73",
     "core-js": "^2.4.1",
+    "ng2-dragula": "^1.5.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
