--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@types/lodash": "^4.14.73",
+    "bulma": "^0.5.1",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "ng2-dragula": "^1.5.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
